--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://zibulux.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: GitHub_username # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
