Add Template Categorie

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,8 @@
   name: zoogoumafou
   github: zoogoumafou
   url: https://github.com/zoogoumafou
+
+<author_rylan>:
+  name: rylan
+  github: rylanconrad
+  url: https://github.com/rylanconrad
