--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: America/Toronto
 
 title: Zibulux # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 👋 Self-learning platform! 🚀 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Our mission is to make complex concepts simple ✅ and turn this platform into your starting point 🚀 — inspiring curiosity and motivating you to explore deeper 📖✨.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
